@@ -18,6 +18,7 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 ------------------------------------------------------------------------------------
 CHANGELOG file
 v1.10.03.08
+	Log Enh. Support for OBYX_SYSLOG_OFF
 	Bugfix.  http output remove_methods had reversed output logic.
 	Bugfix.  over-enthusiastic error report for scope attribute.
 v1.10.03.05
